--- a/UffAySpaceRobots/UffAySpaceRobots.vcxproj
+++ b/UffAySpaceRobots/UffAySpaceRobots.vcxproj
@@ -19,10 +19,22 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="anagram.c" />
+    <ClCompile Include="helper.c" />
+    <ClCompile Include="labyrinth.c" />
     <ClCompile Include="main.c" />
+    <ClCompile Include="numbers.c" />
+    <ClCompile Include="numPad.c" />
+    <ClCompile Include="room1.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="anagram.h" />
+    <ClInclude Include="helper.h" />
+    <ClInclude Include="labyrinth.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="numbers.h" />
+    <ClInclude Include="numPad.h" />
+    <ClInclude Include="room1.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{54FB983F-7596-4255-A2E6-7048350579D9}</ProjectGuid>
