--- a/UffAySpaceRobots/UffAySpaceRobots.vcxproj
+++ b/UffAySpaceRobots/UffAySpaceRobots.vcxproj
@@ -20,21 +20,27 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="anagram.c" />
+    <ClCompile Include="flashback.c" />
     <ClCompile Include="helper.c" />
     <ClCompile Include="labyrinth.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="numbers.c" />
     <ClCompile Include="numPad.c" />
     <ClCompile Include="room1.c" />
+    <ClCompile Include="room2.c" />
+    <ClCompile Include="room3.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="anagram.h" />
+    <ClInclude Include="flashback.h" />
     <ClInclude Include="helper.h" />
     <ClInclude Include="labyrinth.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="numbers.h" />
     <ClInclude Include="numPad.h" />
     <ClInclude Include="room1.h" />
+    <ClInclude Include="room2.h" />
+    <ClInclude Include="room3.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{54FB983F-7596-4255-A2E6-7048350579D9}</ProjectGuid>
