--- a/UffAySpaceRobots/UffAySpaceRobots.vcxproj.filters
+++ b/UffAySpaceRobots/UffAySpaceRobots.vcxproj.filters
@@ -36,6 +36,15 @@
     <ClCompile Include="labyrinth.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="room2.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="room3.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="flashback.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -57,6 +66,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="labyrinth.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="room2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="room3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="flashback.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
